--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ li {
 }
 
 img {
-    width: 300px;
+    width: 100px;
     margin-right: 30px;
     opacity: 80%;
 } 
@@ -19,4 +19,27 @@ img:hover {
 
 ul#ingredients li {
     padding-left: 40px;
+}
+
+#validation-input {
+    border: 3px solid #bdbdbd;
+}
+
+#validation-input.valid {
+    border-color: #4caf50;
+}
+
+#validation-input.invalid {
+    border-color: #f44336;
+}
+
+.label-invalid {
+    display: block;
+    color: red;
+}
+
+.task {
+    border: 2px solid grey;
+    margin-bottom: 20px;
+    padding: 20px;
 }
